Added error messages, fixed form, fixed filter

--- a/softdevfinals/templates/accounts/password_reset.html
+++ b/softdevfinals/templates/accounts/password_reset.html
@@ -11,13 +11,29 @@
 <body>
     <div class="box-container p-4">
         <h4 class="text-center">Reset Password</h4>
+
+        {% if success_message_reset_password %}
+            <div class="alert alert-success">
+                {{ success_message_reset_password }}
+            </div>
+        {% endif %}
+
+        {% if error_message_reset_password %}
+            <div class="alert alert-danger">
+                {{ error_message_reset_password }}
+            </div>
+        {% endif %}
+
         <form method="post">
             {% csrf_token %}
             <input type="email" class="form-control mb-3" id="email" name="email" placeholder="Enter your email" required>
             <button type="submit" class="btn custom-btn btn-block">Reset</button>
         </form>
-        <p><a href="{% url 'login' %}">Back to Login</a></p>
+        <p class="text-center"><a href="{% url 'login' %}">Back to Login</a></p>
     </div>
-</body>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
