--- a/softdevfinals/templates/accounts/password_reset_confirm.html
+++ b/softdevfinals/templates/accounts/password_reset_confirm.html
@@ -8,25 +8,33 @@
     <link rel="stylesheet" href="{% static 'css/password_reset_confirm.css' %}">
 </head>
 <body>
-    <div class="box-container">
+    <div class="box-container p-4">
         <h3>Password Reset Confirmation</h3>
+        
         {% if valid_link %}
+            <!-- Display success or error messages -->
+            {% if success_message_confirm_reset_password %}
+                <div class="alert alert-success">{{ success_message_confirm_reset_password }}</div>
+            {% endif %}
+            {% if error_message_confirm_reset_password %}
+                <div class="alert alert-danger">{{ error_message_confirm_reset_password }}</div>
+            {% endif %}
+
             <form method="post">
                 {% csrf_token %}
                 <label for="new_password">New Password:</label>
                 <input type="password" class="form-control mb-3" id="new_password" name="new_password" required>
+                
                 <label for="confirm_password">Confirm Password:</label>
                 <input type="password" class="form-control mb-3" id="confirm_password" name="confirm_password" required>
-                <small>Password must be greater than 8</small>
+                
                 <div class="text-right">
                     <button type="submit" class="btn custom-btn ml-auto">Reset Password</button>
                 </div>
-                
             </form>
         {% else %}
             <p>The password reset link is invalid or has expired.</p>
         {% endif %}
     </div>
-    
 </body>
 </html>
