--- a/softdevfinals/templates/accounts/landing.html
+++ b/softdevfinals/templates/accounts/landing.html
@@ -39,38 +39,31 @@
 
           <!-- Right Side: Recipe Cards -->
           <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-6 mb-4">
-                <div class="recipe-card">
-                  <img
-                    src="{% static 'css/strawberry_pancake.png' %}"
-                    alt="Strawberry Pancakes"
+    <div class="row">
+        {% for recipe in trending_recipes %}
+        <div class="col-md-6 mb-4">
+            <div class="recipe-card">
+                <img
+                    src="{{ recipe.image.url }}" 
+                    alt="{{ recipe.title }}"       
                     class="recipe-image"
-                  />
-                  <h3 class="recipe-title">STRAWBERRY PANCAKES</h3>
-                  <div class="stars">★★★★★</div>
-                  <p class="recipe-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Vestibulum ipsum augue, tincidunt.
-                  </p>
-                </div>
-              </div>
-              <div class="col-md-6 mb-4">
-                <div class="recipe-card">
-                  <img
-                    src="{% static 'css/chicken_curry.png' %}"
-                    alt="Chicken Curry"
-                    class="recipe-image"
-                  />
-                  <h3 class="recipe-title">CHICKEN CURRY</h3>
-                  <div class="stars">★★★★★</div>
-                  <p class="recipe-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Vestibulum ipsum augue, tincidunt.
-                  </p>
-                </div>
-              </div>
+                />
+                <h3 class="recipe-title">{{ recipe.name }}</h3> <!-- Dynamic title -->
+                <p class="recipe-description">
+                    {{ recipe.user }} <!-- Assuming you have a user field in your Recipe model -->
+                </p>
+
+                <!-- Average Rating with yellow color -->
+                {% if recipe.average_rating %}
+                    <p style="color: #ffd708;"><strong>Average Rating:</strong> {{ recipe.average_rating|floatformat:1 }} / 5</p>
+                {% else %}
+                    <p style="color: #ffd708;"><strong>Average Rating:</strong> No ratings yet</p>
+                {% endif %}
             </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
           </div>
         </div>
       </div>
